<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_title_text">Theres no inventory</string>
    <string name="empty_view_subtitle_text">add inventory by clicking the button</string>
    <string name="editor_delete_inventory_successful">deleted inventory was succesfful</string>
    <string name="editor_delete_inventory_failed">inventory not deleted</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this product?</string>
    <string name="keep_editing">keep editing</string>
    <string name="discard">discard</string>
    <string name="unsaved_changes_dialog_msg">you have unsaved changes</string>
    <string name="editor_update_product_successful">Update succesfful</string>
    <string name="editor_update_product_failed">uh oh update failed</string>
    <string name="editor_insert_product_successful">insert successful</string>
    <string name="editor_insert_product_failed">product not inserted</string>
    <string name="editor_activity_title_new_product">New Product</string>
    <string name="editor_activity_title_edit_product">edit product</string>
    <string name="unit_product_price">$</string>
    <string name="hint_product_price">price</string>
    <string name="category_measurement">Currency</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_name">Name</string>
    <string name="category_overview">Product</string>
    <string name="action_save">Save Product</string>
    <string name="action_delete">delete</string>
    <string name="action_insert_dummy_data">insert dummy data</string>
    <string name="action_delete_all_entries">delete all entries</string>
    <string name="unknown_name">unknown name</string>
    <string name="edit_this">Edit product</string>
    <string name="sale">Sale</string>
    <string name="add_button">Add Product</string>
    <string name="select_photo">Select Photo</string>
    <string name="quantity">Quantity</string>
    <string name="increaseButton">Increase Quantity</string>
    <string name="decreaseButton">Decrease Quantity</string>
    <string name="empty_string">One or more of the textviews are empty</string>
    <string name="phoneNumber">Phone Number</string>
</resources>
