<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle"
            android:id="@+id/NoIv"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ivPreview"/>



            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        <EditText
            android:id="@+id/edit_product_price"
            android:hint="@string/hint_product_price"
            android:inputType="number"
            style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
        <EditText
            android:id="@+id/edit_product_phonenumber"
            android:inputType="phone"
            android:hint="@string/phoneNumber"
            style="@style/EditorFieldStyle"/>

            <Button
                android:id="@+id/SelectPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_textview"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decreaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decreaseButton" />

            <Button
                android:id="@+id/increaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increaseButton" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orderButton"
            android:text="Order More"/>
    </LinearLayout>

</LinearLayout>